// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lightning-layout-item alignment-bump 1`] = `
<lightning-layout-item
  class="slds-size_12-of-12 slds-col_bump-right"
>
  #shadow-root(open)
    <slot />
</lightning-layout-item>
`;

exports[`lightning-layout-item default 1`] = `
<lightning-layout-item
  class="slds-size_12-of-12"
>
  #shadow-root(open)
    <slot />
</lightning-layout-item>
`;

exports[`lightning-layout-item flexibility 1`] = `
<lightning-layout-item
  class="slds-col slds-grow slds-shrink slds-size_12-of-12"
>
  #shadow-root(open)
    <slot />
</lightning-layout-item>
`;

exports[`lightning-layout-item padding 1`] = `
<lightning-layout-item
  class="slds-p-around_medium slds-size_12-of-12"
>
  #shadow-root(open)
    <slot />
</lightning-layout-item>
`;
